style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  margin: 0 auto;
  max-width: 1280px;
  font-family: "Poppins";
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header {
  text-align: center;
  padding: 40px;
}

.header .title {
  font-weight: 200;
  font-size: 20px;
}

.header .author {
  font-weight: 600;
  font-size: 20px;
  color: hsl(234, 12%, 34%);
}

.header .quote {
  font-size: 14px;
  margin-top: 8px;
  color: hsl(212, 6%, 64%);
}

.main {
  display: grid;
  gap: 24px;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(4, auto);
  align-items: center;
}

.card {
  width: 300px;
  height: 200px;
  box-shadow: 0 10px 20px hsl(212, 6%, 84%);
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  align-items: start;
  padding: 20px 16px;
}

.supervisor {
  grid-area: 1/1/5/2;
  border-top: 4px solid hsl(180, 62%, 55%);
}

.team-builder {
  grid-area: 1/2/3/3;
  border-top: 4px solid hsl(0, 78%, 62%);
}

.karma {
  grid-area: 3/2/5/3;
  border-top: 4px solid hsl(34, 97%, 64%);
}

.calculator {
  grid-area: 1/3/5/4;
  border-top: 4px solid hsl(212, 86%, 64%);
}

.card h4 {
  color: hsl(234, 12%, 34%);
}

.card p {
  margin-top: 8px;
  font-size: 14px;
  color: hsl(212, 6%, 44%);
}

.card img {
  align-self: flex-end;
  margin-top: 12px;
}

@media (max-width: 375px) {
  .main {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
  }

  .supervisor,
  .team-builder,
  .karma,
  .calculator {
    grid-area: auto;
    grid-column: 1/1;
  }
}

